--- a/index.html
+++ b/index.html
@@ -75,18 +75,25 @@
 
         <div class="restaurants-container">
           <article class="card">
-            <img
-              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            />
+            <div class="restaurant-image">
+              <img
+                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+              <div class="btn-new">Nouveau</div>
+            </div>
             <div class="card-content">
               <h3>La palette du goût</h3>
               <p>Ménilmontant</p>
             </div>
-            <div class="layout-star">
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
+
+            <div class="heart">
+              <div class="heart__1">
+                <i class="far fa-heart fa-2x"></i>
+              </div>
+              <div class="heart__2">
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <span>Nouveau</span>
           </article>
 
           <article class="card">
@@ -97,25 +104,35 @@
               <h3>Le délice des sens</h3>
               <p>Folie-Méricourt</p>
             </div>
-            <div class="layout-star">
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
+            <div class="heart">
+              <div class="heart__1">
+                <i class="far fa-heart fa-2x"></i>
+              </div>
+              <div class="heart__2">
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
           </article>
 
           <article class="card">
-            <img
-              src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            />
+            <div class="restaurant-image">
+              <img
+                src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              />
+              <div class="btn-new">Nouveau</div>
+            </div>
             <div class="card-content">
               <h3>La note enchantée</h3>
               <p>Charonne</p>
             </div>
-            <div class="layout-star">
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
+            <div class="heart">
+              <div class="heart__1">
+                <i class="far fa-heart fa-2x"></i>
+              </div>
+              <div class="heart__2">
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
-            <span>Nouveau</span>
           </article>
 
           <article class="card">
@@ -126,15 +143,19 @@
               <h3>A la française</h3>
               <p>Cité rouge</p>
             </div>
-            <div class="layout-star">
-              <i class="fa-regular fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
+            <div class="heart">
+              <div class="heart__1">
+                <i class="far fa-heart fa-2x"></i>
+              </div>
+              <div class="heart__2">
+                <i class="fas fa-heart fa-2x"></i>
+              </div>
             </div>
           </article>
         </div>
       </section>
       <footer>
-        <h4><a href="#">ohmyfood</a></h4>
+        <h4 class="logo-footer">ohmyfood</h4>
         <div class="footer-content">
           <p>
             <a href="mailto:contact@ofmyfood.com">Contact</a>
