--- a/page2.html
+++ b/page2.html
@@ -11,19 +11,24 @@
       crossorigin="anonymous"
     ></script>
     <title>A la française</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <div>
-        <div class="logo">
-          <!-- lien de retour vers la page principale -->
-          <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        </div>
-        <div class="title">
-          <h1>ohmyfood</h1>
-        </div>
+      <div class="logo">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
       </div>
+      <img
+        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
+      />
     </header>
 
     <main>
@@ -33,107 +38,122 @@
       />
       <div class="main-container">
         <div class="title-menu">
-          <h1>À la française</h1>
-          <div class="layout-star">
-            <i class="fa-regular fa-heart"></i>
-          </div>
+          <h2 class="card-title">À la française<i class="far fa-heart"></i></h2>
         </div>
 
         <form class="menu">
           <section>
-            
             <div class="starter">
-              <h3><span>ENTRÉES</span></h3>
+              <h3>ENTRÉES</h3>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Tarte de pouple acidulé</h4>
-                  <p>Aux zests d'orange</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Tarte de pouple acidulé</h4>
+                    <p>Aux zests d'orange</p>
+                  </div>
+                  <div class="prix"><p>25€</p></div>
                 </div>
-                <div class="prix"><p>25€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Velouté de légumes d'antan</h4>
-                  <p>Carottes, panais, topinambour</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Velouté de légumes d'antan</h4>
+                    <p>Carottes, panais, topinambour</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
                 </div>
-                <div class="prix"><p>35€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Soupe à l'oignon</h4>
-                  <p>Revisitée</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Soupe à l'oignon</h4>
+                    <p>Revisitée</p>
+                  </div>
+                  <div class="prix"><p>20€</p></div>
                 </div>
-                <div class="prix"><p>20€</p></div>
               </article>
             </div>
 
             <div class="dish">
-              <h3><span>PLATS</span></h3>
+              <h3>PLATS</h3>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Coquilles Saint-Jacques</h4>
-                  <p>Accompagnées d'une purée de panais</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Coquilles Saint-Jacques</h4>
+                    <p>Accompagnées d'une purée de panais</p>
+                  </div>
+                  <div class="prix"><p>40€</p></div>
                 </div>
-                <div class="prix"><p>40€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Magret de canard</h4>
-                  <p>Et parmentier de pommes de terres</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Magret de canard</h4>
+                    <p>Et parmentier de pommes de terres</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
                 </div>
-                <div class="prix"><p>35€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                  <p>Sur son lit de gnocchis aux légumes</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                    <p>Sur son lit de gnocchis aux légumes</p>
+                  </div>
+                  <div class="prix"><p>44€</p></div>
                 </div>
-                <div class="prix"><p>44€</p></div>
               </article>
             </div>
 
             <div class="dessert">
-              <h3><span>DÉSSERTS</span></h3>
+              <h3>DÉSSERTS</h3>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Pétales de violettes glacés</h4>
-                  <p>Et purée de noisettes</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Pétales de violettes glacés</h4>
+                    <p>Et purée de noisettes</p>
+                  </div>
+                  <div class="prix"><p>18€</p></div>
                 </div>
-                <div class="prix"><p>18€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Fondant au chocolat</h4>
-                  <p>Revisité</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Fondant au chocolat</h4>
+                    <p>Revisité</p>
+                  </div>
+                  <div class="prix"><p>22€</p></div>
                 </div>
-                <div class="prix"><p>22€</p></div>
               </article>
 
-              <article class="card">
-                <div class="card-content">
-                  <h4>Millefeuille croustillant</h4>
-                  <p>Myrtilles et pâte d'amande</p>
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Millefeuille croustillant</h4>
+                    <p>Myrtilles et pâte d'amande</p>
+                  </div>
+                  <div class="prix"><p>23€</p></div>
                 </div>
-                <div class="prix"><p>23€</p></div>
               </article>
             </div>
+          </section>
 
-            <div class="btn-explore">
-              <label>Commander</label>
-            </div>
+          <section class="btn-explore">
+            <label>Commander</label>
           </section>
         </form>
       </div>
+
       <footer>
-        <h4><a href="#">ohmyfood</a></h4>
+        <h4 class="logo-footer">ohmyfood</h4>
         <div class="footer-content">
           <p>
             <a href="mailto:contact@ofmyfood.com">Contact</a>
