--- a/page3.html
+++ b/page3.html
@@ -3,85 +3,174 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmyfood</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="restaurant à la française" />
+    <link rel="stylesheet" href="page3.css" />
+    <script
+      src="https://kit.fontawesome.com/0faa74c727.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>La palette du goût</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
+      <div class="logo">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+      </div>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
       />
     </header>
 
-    <div class="menu">
-      <h3>Le délice des sens</h3>
-
-      <div class="enter">
-        <h4>ENTREES</h4>
-
-        <div class="card">
-          <h5>Tartare de thon</h5>
-          <p>Assaisonné au yuzu</p>
-          25€
+    <main>
+      <img
+        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="a la française"
+      />
+      <div class="main-container">
+        <div class="title-menu">
+          <h2 class="card-title">
+            La palette du goût<i class="far fa-heart"></i>
+          </h2>
         </div>
 
-        <div class="card">
-          <h5>Bouchée de homard croustillant</h5>
-          <p>Et sa farandole de petits légumes</p>
-          35€
+        <form class="menu">
+          <section>
+            <div class="starter">
+              <h3>ENTRÉES</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Fricassée d'escargots</h4>
+                    <p>Au piment d'Espelette</p>
+                  </div>
+                  <div class="prix"><p>25€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Foie gras de canard mi-cuit</h4>
+                    <p>Et ses copeaux de truffe noire</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Œuf au plat</h4>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                  </div>
+                  <div class="prix"><p>20€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dish">
+              <h3>PLATS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Filet de bœuf aux herbes</h4>
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                  </div>
+                  <div class="prix"><p>40€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Parmentier de queue de bœuf</h4>
+                    <p>À la truffe noire sur sa purée de panais</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Filet de turbot</h4>
+                    <p>Aux agrumes</p>
+                  </div>
+                  <div class="prix"><p>44€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dessert">
+              <h3>DÉSSERTS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Paris-Brest</h4>
+                    <p>Revisité</p>
+                  </div>
+                  <div class="prix"><p>18€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Macaron au chocolat d'exception</h4>
+                  </div>
+                  <div class="prix"><p>22€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Millefeuille croustillant</h4>
+                    <p>Myrtilles et pâte d'amande</p>
+                  </div>
+                  <div class="prix"><p>23€</p></div>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section class="btn-explore">
+            <label>Commander</label>
+          </section>
+        </form>
+      </div>
+
+      <footer>
+        <h4 class="logo-footer">ohmyfood</h4>
+        <div class="footer-content">
+          <p>
+            <a href="mailto:contact@ofmyfood.com">Contact</a>
+          </p>
+          <p>Mentions légales</p>
+
+          <p>
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </p>
+          <p>
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </p>
         </div>
-
-        <div class="card">
-          <h5>Velouté de cèpes</h5>
-          <p>Aux truffes</p>
-          20€
-        </div>
-      </div>
-
-      <h4>PLATS</h4>
-
-      <div class="card">
-        <h5>Poulet rôti aux herbes de Provence</h5>
-        <p>Et sa crème de truffe</p>
-        40€
-      </div>
-
-      <div class="card">
-        <h5>Langouste rôtie</h5>
-        <p>Et ses légumes de saison</p>
-        35€
-      </div>
-
-      <div class="card">
-        <h5>Côte de bœuf Angus</h5>
-        <p>Et sa purée de panais</p>
-        44€
-      </div>
-
-      <h4>DESSERTS</h4>
-
-      <div class="card">
-        <h5>Farandole de desserts</h5>
-        <p>Du chef</p>
-        18€
-      </div>
-
-      <div class="card">
-        <h5>Crème brulée</h5>
-        <p>Revisitée</p>
-        22€
-      </div>
-
-      <div class="card">
-        <h5>Tiramisu</h5>
-        <p>À la noisette</p>
-        23€
-      </div>
-
-      <div class="command-button">
-        <p>Commander</p>
-      </div>
-    </div>
-
-    <footer></footer>
+      </footer>
+    </main>
   </body>
 </html>
