--- a/page4.html
+++ b/page4.html
@@ -3,91 +3,185 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmyfood</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="restaurant à la française" />
+    <link rel="stylesheet" href="page4.css" />
+    <script
+      src="https://kit.fontawesome.com/0faa74c727.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>La note enchantée</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
+      <div class="logo">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+      </div>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
       />
     </header>
 
-    <div class="menu">
-      <h3>La note enchantée</h3>
-
-      <div class="enter">
-        <h4>ENTREES</h4>
-
-        <div class="card">
-          <h5>Ravioles de foie gras</h5>
-          <p>Accompagnées de leur crème à la truffe</p>
-          25€
+    <main>
+      <img
+        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        alt="a la française"
+      />
+      <div class="main-container">
+        <div class="title-menu">
+          <h2 class="card-title">
+            La note enchantée<i class="far fa-heart"></i>
+          </h2>
         </div>
 
-        <div class="card">
-          <h5>Caviar osciètre</h5>
-          <p>Sur blini à la farine de blé noir</p>
-          35€
+        <form class="menu">
+          <section>
+            <div class="starter">
+              <h3>ENTRÉES</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Ravioles de foie gras</h4>
+                    <p>Accompagnées de leur crème à la truffe</p>
+                  </div>
+                  <div class="prix"><p>25€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Caviar osciètre</h4>
+                    <p>Sur blini à la farine de blé noir</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Homard et espuma de potiron</h4>
+                    <p>Marinés aux zestes d'orange</p>
+                  </div>
+                  <div class="prix"><p>20€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Foie gras de canard cuit entier</h4>
+                    <p>Confiture de figue et pain toasté</p>
+                  </div>
+                  <div class="prix"><p>20€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dish">
+              <h3>PLATS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Noix de coquilles Saint-Jacques</h4>
+                    <p>Sur lit de purée de céleri-rave</p>
+                  </div>
+                  <div class="prix"><p>40€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Langoustine poêlée</h4>
+                    <p>Purée de patate douce</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Mijoté de queue de bœuf</h4>
+                    <p>Et riz sauvage aux zestes de citron</p>
+                  </div>
+                  <div class="prix"><p>44€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dessert">
+              <h3>DÉSSERTS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Macaron noisette et chocolat</h4>
+                    <p>Glace au caramel brun et sel de Guérande</p>
+                  </div>
+                  <div class="prix"><p>18€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Baba au rhum revisité</h4>
+                    <p>Avec son coulis de citron</p>
+                  </div>
+                  <div class="prix"><p>22€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Tarte au citron meringuée</h4>
+                    <p>Déstructurée</p>
+                  </div>
+                  <div class="prix"><p>23€</p></div>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section class="btn-explore">
+            <label>Commander</label>
+          </section>
+        </form>
+      </div>
+
+      <footer>
+        <h4 class="logo-footer">ohmyfood</h4>
+        <div class="footer-content">
+          <p>
+            <a href="mailto:contact@ofmyfood.com">Contact</a>
+          </p>
+          <p>Mentions légales</p>
+
+          <p>
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </p>
+          <p>
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </p>
         </div>
-
-        <div class="card">
-          <h5>Homard et espuma de potiron</h5>
-          <p>Marinés aux zestes d'orange</p>
-          20€
-        </div>
-
-        <div class="card">
-          <h5>Foie gras de canard cuit entier</h5>
-          <p>Confiture de figue et pain toasté</p>
-          35€
-        </div>
-      </div>
-
-      <h4>PLATS</h4>
-
-      <div class="card">
-        <h5>Noix de coquilles Saint-Jacques</h5>
-        <p>Sur lit de purée de céleri-rave</p>
-        40€
-      </div>
-
-      <div class="card">
-        <h5>Langoustine poêlée</h5>
-        <p>Purée de patate douce</p>
-        35€
-      </div>
-
-      <div class="card">
-        <h5>Mijoté de queue de bœuf</h5>
-        <p>Et riz sauvage aux zestes de citron</p>
-        44€
-      </div>
-
-      <h4>DESSERTS</h4>
-
-      <div class="card">
-        <h5>Macaron noisette et chocolat</h5>
-        <p>Glace au caramel brun et sel de Guérande</p>
-        18€
-      </div>
-
-      <div class="card">
-        <h5>Baba au rhum revisité</h5>
-        <p>Avec son coulis de citron</p>
-        22€
-      </div>
-
-      <div class="card">
-        <h5>Tarte au citron meringuée</h5>
-        <p>Déstructurée</p>
-        23€
-      </div>
-
-      <div class="command-button">
-        <p>Commander</p>
-      </div>
-    </div>
-
-    <footer></footer>
+      </footer>
+    </main>
   </body>
 </html>
