--- a/page5.html
+++ b/page5.html
@@ -3,85 +3,175 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmyfood</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="restaurant à la française" />
+    <link rel="stylesheet" href="page5.css" />
+    <script
+      src="https://kit.fontawesome.com/0faa74c727.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Le délice des sens</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
+      <div class="logo">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+      </div>
       <img
         src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/logo/ohmyfood.png"
       />
     </header>
 
-    <div class="menu">
-      <h3>À la française</h3>
-
-      <div class="enter">
-        <h4>ENTREES</h4>
-
-        <div class="card">
-          <h5>Tartare de poulpe acidulé</h5>
-          <p>Aux zestes d'orange</p>
-          25€
+    <main>
+      <img
+        src="Images+et+textes+Ohmyfood/Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        alt="a la française"
+      />
+      <div class="main-container">
+        <div class="title-menu">
+          <h2 class="card-title">
+            Le délice des sens<i class="far fa-heart"></i>
+          </h2>
         </div>
 
-        <div class="card">
-          <h5>Velouté de légumes d'antan</h5>
-          <p>Carotte, panais, topinambour</p>
-          35€
+        <form class="menu">
+          <section>
+            <div class="starter">
+              <h3>ENTRÉES</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Tartare de thon</h4>
+                    <p>Assaisonné au yuzu</p>
+                  </div>
+                  <div class="prix"><p>25€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Bouchée de homard croustillant</h4>
+                    <p>Et sa farandole de petits légumes</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Velouté de cèpes</h4>
+                    <p>Aux truffes</p>
+                  </div>
+                  <div class="prix"><p>20€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dish">
+              <h3>PLATS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Poulet rôti aux herbes de Provence</h4>
+                    <p>Et sa crème de truffe</p>
+                  </div>
+                  <div class="prix"><p>40€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Langouste rôtie</h4>
+                    <p>Et ses légumes de saison</p>
+                  </div>
+                  <div class="prix"><p>35€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Côte de bœuf Angus</h4>
+                    <p>Et sa purée de panais</p>
+                  </div>
+                  <div class="prix"><p>44€</p></div>
+                </div>
+              </article>
+            </div>
+
+            <div class="dessert">
+              <h3>DÉSSERTS</h3>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Farandole de desserts</h4>
+                    <p>Du chef</p>
+                  </div>
+                  <div class="prix"><p>18€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Crème brulée</h4>
+                    <p>Revisitée</p>
+                  </div>
+                  <div class="prix"><p>22€</p></div>
+                </div>
+              </article>
+
+              <article class="card-menu">
+                <div class="card">
+                  <div class="card-content">
+                    <h4>Tiramisu</h4>
+                    <p>À la noisette</p>
+                  </div>
+                  <div class="prix"><p>23€</p></div>
+                </div>
+              </article>
+            </div>
+          </section>
+
+          <section class="btn-explore">
+            <label>Commander</label>
+          </section>
+        </form>
+      </div>
+
+      <footer>
+        <h4 class="logo-footer">ohmyfood</h4>
+        <div class="footer-content">
+          <p>
+            <a href="mailto:contact@ofmyfood.com">Contact</a>
+          </p>
+          <p>Mentions légales</p>
+
+          <p>
+            <i class="fa-solid fa-handshake-angle"></i>
+            Devenir partenaire
+          </p>
+          <p>
+            <i class="fa-solid fa-utensils"></i>
+            Proposer un restaurant
+          </p>
         </div>
-
-        <div class="card">
-          <h5>Soupe à l'oignon</h5>
-          <p>Revisitée</p>
-          20€
-        </div>
-      </div>
-
-      <h4>PLATS</h4>
-
-      <div class="card">
-        <h5>Coquilles Saint-Jacques</h5>
-        <p>Accompagnées d'une purée de panais</p>
-        40€
-      </div>
-
-      <div class="card">
-        <h5>Magret de canard</h5>
-        <p>Et parmentier de pommes de terre</p>
-        35€
-      </div>
-
-      <div class="card">
-        <h5>Pigeonneau d’Ille-et-Vilaine</h5>
-        <p>Sur son lit de gnocchis aux légumes</p>
-        44€
-      </div>
-
-      <h4>DESSERTS</h4>
-
-      <div class="card">
-        <h5>Pétales de violettes glacés</h5>
-        <p>Et purée de noisettes</p>
-        18€
-      </div>
-
-      <div class="card">
-        <h5>Fondant au chocolat</h5>
-        <p>Revisité</p>
-        22€
-      </div>
-
-      <div class="card">
-        <h5>Millefeuille croustillant</h5>
-        <p>Myrtilles et pâte d’amande</p>
-        23€
-      </div>
-
-      <div class="command-button">
-        <p>Commander</p>
-      </div>
-    </div>
-
-    <footer></footer>
+      </footer>
+    </main>
   </body>
 </html>
